--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     --bg: var(--c3);
     --d: 4000ms;
     --e: cubic-bezier(0.76, 0, 0.24, 1);
-    
+   
     animation: colorAnimation var(--d) var(--e) infinite,
              positionAnimation var(--d) var(--e) infinite,
              pulse var(calc(2 * var(--d))) var(--e) infinite;
@@ -154,7 +154,7 @@ header {
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
-    width: 100%;
+    width: 50%;
 }
 
 .menu-toggle {
@@ -530,7 +530,7 @@ button:hover {
     }
 }
 .logo {
-    width: 150px;
+    width: 50px;
   }
   
   .nav-btn {
@@ -542,8 +542,8 @@ button:hover {
   
   .open-btn {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 43px;
+    left: 56px;
     color:rgb(255, 255, 255)
   }
   
@@ -554,6 +554,7 @@ button:hover {
     height: 100vh;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
+    background-color: #a777e3;
   }
   
   .nav.visible {
@@ -561,7 +562,7 @@ button:hover {
   }
   
   .nav-black {
-    background-color: rgb(34, 31, 31);
+    background-color: rgb(155, 27, 27);
     width: 60%;
     max-width: 480px;
     min-width: 320px;
@@ -612,11 +613,153 @@ button:hover {
   }
   
   .navbar li a {
-    color: rgb(34, 31, 31);
+    color: rgb(109, 19, 19);
     font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
   }
+
+
+.container {
+    max-width: 1050px;
+    width: 90%;
+    margin: auto;
+  }
+  
+  .navbar {
+    width: 100%;
+    box-shadow: 0 1px 4px rgba(55, 90, 125, 0.15);
+  }
+  
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+  }
+  
+  .navbar .menu-items {
+    display: flex;
+  }
+  
+  .navbar .nav-container li {
+    list-style: none;
+  }
+  
+  .navbar .nav-container a {
+    text-decoration: none;
+    color: #0e2431;
+    font-weight: 500;
+    font-size: 1.2rem;
+    padding: 0.7rem;
+  }
+  
+  .navbar .nav-container a:hover{
+      font-weight: bolder;
+  }
+  
+  .nav-container {
+    display: block;
+    position: relative;
+    height: 60px;
+  }
+  
+  .nav-container .checkbox {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 20px;
+    left: 20px;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  .nav-container .hamburger-lines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 17px;
+    left: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .nav-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #0e2431;
+  }
+  
+  .nav-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .nav-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .nav-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .navbar .menu-items {
+    padding-top: 120px;
+    background-color: #7e33c4;
+    box-shadow: inset 0 0 2000px rgba(105, 30, 30, 0.5);
+    height: 100vh;
+    width: 100%;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    margin-left: -40px;
+    padding-left: 50px;
+    transition: transform 0.5s ease-in-out;
+    text-align: center;
+  }
+  
+  .navbar .menu-items li {
+    margin-bottom: 1.2rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  
+  .logo {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 1.2rem;
+    color: #0e2431;
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .logo{
+    display: none;
+  }
+  
   
   .navbar ul {
     list-style-type: none;
@@ -626,7 +769,7 @@ button:hover {
     align-items: center;
     background-color: #fee6e3;
     border: 2px solid #111;
-    border-radius: 8px;
+    border-radius: 50px;
     box-sizing: border-box;
     color: #111;
     cursor: pointer;
